--- a/gatewayserver/src/main/resources/application.properties
+++ b/gatewayserver/src/main/resources/application.properties
@@ -23,3 +23,15 @@ spring.zipkin.baseUrl=http://localhost:9411/
 #spring.rabbitmq.port=5672
 #spring.rabbitmq.username=guest
 #spring.rabbitmq.password=guest
+
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri = http://localhost:7080/realms/master/protocol/openid-connect/certs
+
+spring.security.oauth2.client.provider.keycloak.token-uri=http://localhost:7080/realms/master/protocol/openid-connect/token
+spring.security.oauth2.client.provider.keycloak.authorization-uri=http://localhost:7080/realms/master/protocol/openid-connect/auth
+spring.security.oauth2.client.provider.keycloak.userinfo-uri=http://localhost:7080/realms/master/protocol/openid-connect/userinfo
+spring.security.oauth2.client.provider.keycloak.user-name-attribute=preferred_username
+spring.security.oauth2.client.registration.eazybank-gateway.provider=keycloak
+spring.security.oauth2.client.registration.eazybank-gateway.client-id=eazybank-gateway-ui
+spring.security.oauth2.client.registration.eazybank-gateway.client-secret=zfoalJ1P4e4uTkkIJYQtm9MviTYJ6sqn
+spring.security.oauth2.client.registration.eazybank-gateway.authorization-grant-type=authorization_code
+spring.security.oauth2.client.registration.eazybank-gateway.redirect-uri={baseUrl}/login/oauth2/code/keycloak
